--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -98,7 +98,11 @@ duoshuo_info:
   ua_enable: true
   admin_enable: false
   user_id: 0
+  duoshuo_hotartical: true
   #admin_nickname: ROOT
+duoshuo_share: true
+baidu_analytics: 154101e86ea67b8b420e04051c6e0b2a
+google_analytics: UA-52231954-2
 
 # Facebook SDK Support.
 # https://github.com/iissnan/hexo-theme-next/pull/410
