fix: hexo-qiniu-sync 插件 安装后 hexo s 报错的bug

--- a/_config.yml
+++ b/_config.yml
@@ -63,9 +63,9 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 plugins: 
-  - hexo-qiniu-sync
+# - hexo-qiniu-sync
 qiniu:
-  offline: false
+  offline: true
   sync: true
   bucket: sumaolin
   # access_key: hpuB89Wsfc2l8zgx-6A5-P5xI-l0cYWE19KpPdX-
