--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ node_js: stable
 install:
   - npm install
 #before_script:
- # - npm install -g gulp
+# - npm install -g gulp
 script:
-  - hexo g
+  - hexo clean
+  - hexo generate
+
 after_script:
   - cd ./public
   - git init
@@ -18,7 +20,7 @@ after_script:
 # E: Build LifeCycle
 branches:
   only:
-    - blog-source
+    - master
 env:
- global:
-   - GH_REF: github.com/sumaolin/sumaolin.github.com.git
+  global:
+    - GH_REF: github.com/sumaolin/sumaolin.github.com.git
