refactor(all): git cz cli

--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "hexo-server": "^0.2.2"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^3.0.2",
     "hexo-inject": "^1.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
