--- a/themes/indigo-plus/_config.yml
+++ b/themes/indigo-plus/_config.yml
@@ -43,9 +43,9 @@ email: sumaolin@gmail.com
 color: "#3F51B5"
 
 # 页面标题
-tags_title: Tags
-archives_title: Archives
-categories_title: Categories
+tags_title: 标签
+archives_title: 文章
+categories_title: 分类
 
 # 文章截断
 excerpt_render: true
@@ -84,7 +84,7 @@ postMessage: 文章发布地址：<a href="<%- url_for(page.path).replace(/index
 cnzz: false
 
 # 百度统计，如要开启，改为你的 key
-baidu_tongji: false
+baidu_tongji: 154101e86ea67b8b420e04051c6e0b2a
 baidu_site_verification: false
 # 百度自动推送，如要开启，设置为 true
 baidu_push: true
@@ -93,7 +93,7 @@ baidu_push: true
 tajs: false
 
 # google
-google_analytics: false
+google_analytics: UA-52231954-2
 google_site_verification: false
 
 # sogou站长验证 http://zhanzhang.sogou.com/
