fix: baidu_url_submitter 的bug

--- a/_config.yml
+++ b/_config.yml
@@ -127,11 +127,11 @@ baidu_url_submit:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
-  repo:
-    github: git@github.com:sumaolin/sumaolin.github.com.git,master
-    coding: git@git.coding.net:sumaolin/sumaolin.git,coding-pages
-  # type: baidu_url_submitter
+  - type: git
+    repo:
+      github: git@github.com:sumaolin/sumaolin.github.com.git,master
+      coding: git@git.coding.net:sumaolin/sumaolin.git,coding-pages
+  - type: baidu_url_submitter
 
 server:
   port: 4000
