--- a/_config.yml
+++ b/_config.yml
@@ -98,14 +98,14 @@ recommended_posts:
   fixedNumber: false
   autoDisplay: true #自动在文章底部显示推荐文章
   excludePattern: []
-  titleHtml: <h2 id="recommand-post"><strong>推荐阅读</strong>（由<a href="https://github.com/huiwang/hexo-recommended-posts">hexo文章推荐插件</a>驱动）</h2> #自定义标题
+  titleHtml: <h2 id="recommand-post">推荐阅读</h2><p class='recommand-tip'>由 <a href="https://github.com/huiwang/hexo-recommended-posts">hexo文章推荐插件</a> 驱动</p> #自定义标题
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ""
+  path: ''
   per_page: 10
   order_by:
     top: -1
