--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "hexo": {
-    "version": "4.2.1"
+    "version": "5.4.0"
   },
   "engines": {
     "node": ">=10.1.0"
   },
   "dependencies": {
-    "hexo": "^4.2.1",
+    "hexo": "^5.4.0",
     "hexo-asset-image": "1.0.0",
     "hexo-baidu-url-submit": "0.0.6",
     "hexo-deployer-git": "^3.0.0",
@@ -32,6 +32,7 @@
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-less": "^2.0.2",
     "hexo-server": "^2.0.0",
+    "lodash": "^4.17.21",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
