--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ plugins:
 #     folder: css
 
 ## Themes: https://hexo.io/themes/
-theme: indigo-plus
+theme: paper
 avatar: http://tp4.sinaimg.cn/1765384767/180/5749265416/1
 # duoshuo_shortname: sumaolin
 baidu_analytics: 154101e86ea67b8b420e04051c6e0b2a
