--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "node": ">=10.1.0"
   },
   "dependencies": {
+    "hexo": "^5.4.0",
     "hexo-asset-image": "1.0.0",
-    "hexo-baidu-url-submit": "0.0.6",
     "hexo-deployer-git": "^3.0.0",
     "hexo-deployer-heroku": "^0.1.2",
     "hexo-deployer-openshift": "^0.1.2",
