--- a/_config.yml
+++ b/_config.yml
@@ -127,8 +127,7 @@ baidusitemap:
 #   token: pzUVzcOvuLSaEauU ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
 #   path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
 
-# Offli
-ne
+# offline 
 ## Config passed to sw-precache
 ## https://github.com/JLHwung/hexo-offline
 # offline:
